2013-05-09  Josep Torra  <josep@fluendo.com>

	* Makefile.am:
	* configure.ac:
	Fixes build in linux.

2013-03-19  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.2 ===

2013-03-19  Fluendo <julien@fluendo.com>

	* configure.ac: Fix configure for new_release.sh script.

2013-03-19  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (main):
	* lib/fludownloader.c: (fludownloader_new),
	(fludownloader_task_get_length),
	(fludownloader_set_polling_period),
	(fludownloader_get_polling_period):
	* lib/fludownloader.h:
	  - Change polling period API to allow it to be set/get at any time.

2013-03-19  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_thread_function):
	  - Use g_usleep() instead of usleep() for portability.

2013-03-18  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (main):
	* lib/fludownloader.c: (_thread_function), (fludownloader_new):
	* lib/fludownloader.h:
	  - Add API to set a polling period if desired. This allows reducing the CPU
	    consumption by sacrificing network throughput.

2013-03-15  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (fludownloader_task_get_url):
	  - Remove useless, commented-out locks.
	
2013-03-15  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (data_cb):
	* lib/fludownloader.c: (fludownloader_new_task),
	(fludownloader_task_get_url), (fludownloader_task_get_length):
	* lib/fludownloader.h:
	  - Add API to retrieve download size before it is complete.
	  - Update example.

2013-03-14  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_thread_function):
	  - Clear the dummy write and exception fd's to avoid waiting on useless fd's

2013-03-13  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (done_cb), (main):
	* lib/fludownloader.c: (_report_task_done):
	* lib/fludownloader.h:
	  - Return an error code in the done callbacks besides the HTTP status code,