@@ -1,3 +1,9 @@
+2013-23-09  Andoni Morales  <amorales@fluendo.com>
+
+	* examples/multidl.c:
+	* lib/fludownloader.c:
+	Use portable macros for formats
+
 2013-05-09  Josep Torra  <josep@fluendo.com>
 
 	* Makefile.am:
